[gd_scene load_steps=6 format=2]

[ext_resource path="res://WalkingEnemy.gd" type="Script" id=1]
[ext_resource path="res://SKINS/KillableEnemy.tres" type="SpriteFrames" id=2]
[ext_resource path="res://HitBox.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.5, 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.5, 4.5 )

[node name="WalkingEnemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -12 )
frames = ExtResource( 2 )
animation = "Walk"
frame = 1
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -5 )
shape = SubResource( 4 )

[node name="EgdeCheckRight" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="EgdeCheckLeft" type="RayCast2D" parent="."]
position = Vector2( -5, 0 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0.5, -5.5 )
shape = SubResource( 5 )

[node name="RightKillCheck" type="RayCast2D" parent="."]
position = Vector2( -3, -11 )
cast_to = Vector2( 0, -5 )
collision_mask = 2

[node name="MRightKillCheck" type="RayCast2D" parent="."]
position = Vector2( 0, -11 )
cast_to = Vector2( 0, -5 )
collision_mask = 2

[node name="LeftKillCheck" type="RayCast2D" parent="."]
position = Vector2( 4, -11 )
cast_to = Vector2( 0, -5 )
collision_mask = 2

[node name="MLeftKillCheck" type="RayCast2D" parent="."]
position = Vector2( 2, -11 )
cast_to = Vector2( 0, -5 )
collision_mask = 2

[editable path="HitBox"]
